--- a/deepanshu.css
+++ b/deepanshu.css
@@ -3,32 +3,43 @@
     text-align: center;
     /* background-image:url("Screenshot (4).png");
     background-position: center; */
+  
 }
-
-img{
-    size: adjust 1000px;
+#extra{
+  color: rgba(240, 255, 241, 0.011);
 }
     
 #second{   
     display: inline-block;
     display: flex;
-    flex-wrap: wrap;
-    margin: 0px,20px,0px,20px;
+
+    
     list-style-type: none;
+   
+   
 }
 
 #first{
     display: flex;
     justify-content: center;
-    
+   background-color: maroon;
 }
-li{
-    margin: 0,10px;
-  
-}
+
 a{
-    color: black;
+    color: white;
     text-decoration: none;
     margin: 20px;
+   
+}
+#content1 {
+    display: inline-block;
+    border-radius: 20%;
+    border-color: maroon;
+    border-width: 20%;
+    border-style: solid;
+    margin-top: 25px;
+    a{
+        color:maroon;
+    }
    
 }
